Now a request can be mage to get the posible values for the Connections form

--- a/compagri/CompAgri.csproj
+++ b/compagri/CompAgri.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper">
+      <HintPath>..\packages\Dapper.1.38\lib\net45\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -80,9 +83,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ConnectionAmountLimitation.view.create..sql" />
+    <Content Include="ConnectionClimateLimitation.view.create..sql" />
+    <Content Include="ConnectionMeasuramentUnit.view.create..sql" />
+    <Content Include="ConnectionNames.view.create..sql" />
+    <Content Include="ConnectionPositionLimitation.view.create..sql" />
+    <Content Include="ConnectionSeasonLimitation.view.create..sql" />
+    <Content Include="ConnectionSynonyms.view.create..sql" />
+    <Content Include="ConnectionTimeLimitation.view.create..sql" />
     <Content Include="Global.asax" />
     <Content Include="UploadXmlFile.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -107,10 +120,19 @@
     <Compile Include="Connection.cs">
       <DependentUpon>CompAgriModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\CompAgriConnectionsController.cs" />
     <Compile Include="Controllers\CompAgriController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Misc\CheckList.cs" />
+    <Compile Include="Models\Terms\Connection.cs" />
+    <Compile Include="Models\Terms\DatabaseTable.cs" />
+    <Compile Include="Models\Terms\Property.cs" />
+    <Compile Include="Models\Terms\Relation.cs" />
+    <Compile Include="Models\Terms\Term.cs" />
+    <Compile Include="Models\Terms\XMLFile.cs" />
+    <Compile Include="Models\Tree\Tree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property.cs">
       <DependentUpon>CompAgriModel.tt</DependentUpon>
@@ -164,7 +186,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Entities\" />
-    <Folder Include="Models\" />
     <Folder Include="packages\EntityFramework.6.1.1\Content\" />
     <Folder Include="packages\EntityFramework.6.1.1\lib\net40\" />
     <Folder Include="packages\EntityFramework.6.1.1\lib\net45\" />
