--- a/compagri/Web.config
+++ b/compagri/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -35,12 +35,13 @@
     </handlers>
 
     <httpProtocol>
-      <customHeaders>
+      <!--<customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept,Authorization"/>
         <add name="Access-Control-Allow-Methods" value="OPTIONS, TRACE, GET, HEAD, POST, PUT" />
         <add name="Strict-Transport-Security" value="max-age=31536000"/>
-      </customHeaders>
+      </customHeaders>-->
+
     </httpProtocol>
 
   </system.webServer>
