--- a/compagri/bin/CompAgri.dll.config
+++ b/compagri/bin/CompAgri.dll.config
@@ -35,12 +35,13 @@
     </handlers>
 
     <httpProtocol>
-      <customHeaders>
+      <!--<customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept,Authorization"/>
         <add name="Access-Control-Allow-Methods" value="OPTIONS, TRACE, GET, HEAD, POST, PUT" />
         <add name="Strict-Transport-Security" value="max-age=31536000"/>
-      </customHeaders>
+      </customHeaders>-->
+
     </httpProtocol>
 
   </system.webServer>
