--- a/TreeServer/Web.config
+++ b/TreeServer/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="newDb" connectionString="data source=SQL5004.Smarterasp.net;initial catalog=DB_9BA48E_xmldb;persist security info=True;user id=DB_9BA48E_xmldb_admin;password=02101978q_mssql" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-TreeServer-20150120071800.mdf;Initial Catalog=aspnet-TreeServer-20150120071800;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="newDb" connectionString="Data Source=SQL5004.Smarterasp.net;Initial Catalog=DB_9BA48E_xmldb;Persist Security Info=True;User ID=DB_9BA48E_xmldb_admin;Password=02101978q_mssql" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
