--- a/node-tree-implementation/bower.json
+++ b/node-tree-implementation/bower.json
@@ -15,6 +15,11 @@
   ],
   "dependencies": {
     "angular-ui-tree": "~2.1.5",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "angular-bootstrap": "~0.12.0",
+    "angular": "~1.3.10"
+  },
+  "resolutions": {
+    "angular": "~1.3.10"
   }
 }
