--- a/compagri/CompAgri.csproj
+++ b/compagri/CompAgri.csproj
@@ -97,7 +97,24 @@
     <Content Include="ConnectionSeasonLimitation.view.create..sql" />
     <Content Include="ConnectionSynonyms.view.create..sql" />
     <Content Include="ConnectionTimeLimitation.view.create..sql" />
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\npm.js" />
     <Content Include="UploadXmlFile.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -183,6 +200,7 @@
       <DependentUpon>CompAgriModel.edmx</DependentUpon>
       <LastGenOutput>CompAgriModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Scripts\jquery-1.9.1.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
