--- a/compagri/CompAgri.csproj
+++ b/compagri/CompAgri.csproj
@@ -145,6 +145,7 @@
     </Compile>
     <Compile Include="Controllers\CompAgriConnectionsController.cs" />
     <Compile Include="Controllers\CompAgriController.cs" />
+    <Compile Include="Controllers\UploadXmlController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
